--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -36,104 +36,6 @@
   width: 100%;
 }
 
-.assets-layout-empty {
-  font-size: 24px;
-  background-color: rgba(200,200,200,1);
-  color: transparent;
-  text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  line-height: 1.5em;
-  @include flexOn;
-  @include flexCol;
-  @include flexAlignItemsCenter;
-  @include flexJustifyStart;
-
-  .dark & {
-    background-color: $zorroa-darkgray;
-    text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
-  }
-
-  /* Copied from Racetrack.scss. Should we share? */
-  button {
-    font-size: 14pt;
-    text-transform: uppercase;
-    height: 40px;
-    padding: 0 30px;
-    margin-top: 40px;
-    font-weight: 500;
-    background-color: $zorroa-greyish-brown;
-    color: $zorroa-lightgray;
-    border-radius: 3px;
-    border: none;
-
-    &:hover {
-      background-color: #a5a5a5;
-      color: $zorroa-lightgray;
-      font-weight: 500;
-      .dark & { background-color: $zorroa-dimgray; }
-    }
-
-    &:active {
-      background-color: $zorroa-sickly-green;
-      color: white;
-      font-weight: 500;
-    }
-  }
-
-  .assets-layout-icon {
-    margin-top: 100px;
-    margin-bottom: 40px;
-    font-size: 64px;
-    background-color: rgba(200,200,200,1);
-    color: transparent;
-    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-
-    .dark & {
-      text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
-      background-color: $zorroa-darkgray;
-    }
-  }
-}
-
-.assets-footer {
-  align-self: center;
-  z-index: 1;
-  margin-top: -60px;
-  margin-bottom: 10px;
-  max-width: 500px;
-  border-radius: 3px;
-  box-shadow: 0 5px 20px 5px #000000;
-  color: white;
-  background-color: rgba(0,0,0,0.8);
-  padding: 0 10px;
-
-  width: auto;
-  height: 40px;
-
-  @include flexRow;
-  @include flexAlignItemsCenter;
-  @include flexJustifySpaceBetween;
-
-  > * {
-      height: 100%;
-  }
-
-  button:disabled {
-    color: $zorroa-darkgray;
-    &:hover {
-      color: $zorroa-darkgray;
-    }
-  }
-}
-.Workspace.embedMode .assets-footer {
-  display: none;
-}
-
 .thumb-layout {
   margin: 0 10px;
   white-space: nowrap;
@@ -155,47 +57,16 @@
   z-index: 1;
 }
 
-.Footer__icon {
-  color: #aaa;
-  width: 30px;
-  height: 30px;
-  border: 0;
-  outline: 0;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 3px;
-  @include flexRowCenter;
-
-  &:focus,
-  &:hover {
-    color: $zorroa-hover-green;
-  }
-}
-
-.Footer__icon--enabled {
-  color: $zorroa-sickly-green;
-  background-color: rgba(96,96,96,0.75);
-
-  &:focus,
-  &:hover {
-    color: darken($zorroa-sickly-green, 15%);
-  }
-}
-
 .TableToggle {
-  padding-left: 8px;
-  border-left: 1px solid $zorroa-darkgray;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.MultipageToggle {
-  @include flexRowCenter;
-
-  padding: 4px 8px;
-  margin-right: 8px;
-  transform: scaleX(-1) rotate(90deg);
+.Assets-layout-top {
+   top: 0;
+   width: 0;
+   height: 0;
 }
 
 // TODO: factor this into a generic message dialog
