--- a/src/components/Assets/Footer/ThumbSizeSlider.scss
+++ b/src/components/Assets/Footer/ThumbSizeSlider.scss
@@ -1,22 +1,20 @@
-@import '../../styles/core-mixins.scss';
+@import '../../../styles/core-mixins.scss';
 
 .ThumbSizeSlider {
-  color: white;
-  padding: 0 8px;
+  padding: 0 $zorroa-metric-base;
   border-radius: 3px;
 }
 
 .ThumbSizeSlider-slider {
   position: relative;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0 $zorroa-metric-base / 2;
   margin: 0;
   background: none;
 }
 
 .ThumbSizeSlider-smaller {
-  width: 30px;
-  height: 30px;
+  width: $zorroa-metric-base * 3;
+  height: $zorroa-metric-base * 3;
 }
 
 .ThumbSizeSlider-bigger {
@@ -46,7 +44,7 @@
   pointer-events: none;
 }
 .ThumbSizeSlider-line {
-  width: 120px;
+  width: $zorroa-metric-base * 12;
   height: 1px;
   background-color: $zorroa-gray;
   &:active { background-color: $zorroa-sickly-green; }
