--- a/src/components/Racetrack/Multipage/FlipbookWidgetFrameRateChanger.scss
+++ b/src/components/Racetrack/Multipage/FlipbookWidgetFrameRateChanger.scss
@@ -1,15 +1,9 @@
-@import '../../styles/core-mixins.scss';
+@import '../../../styles/core-mixins.scss';
 
 $fps-grabber-size: $zorroa-metric-base * 1.5;
 $fps-rate-offset: $zorroa-metric-base * 2;
 
-.FlipbookWidget {
-  width: $zorroa-metric-base * 18;
-
-  &__body {
-    width: $zorroa-metric-base * 25;
-  }
-
+.FlipbookWidgetFrameRateChanger {
   &__fps-rate-list {
     display: flex;
     width: 100%;
@@ -20,40 +14,15 @@ $fps-rate-offset: $zorroa-metric-base * 2;
     z-index: 2;
   }
 
-  &__order {
-    display: flex;
-    align-content: center;
-    align-items: center;
-  }
-
-  &__order-label {
-    width: 40%;
-
-    &:last-child {
-      text-align: right;
-    }
-  }
-
-  &__order-toggle {
-    width: 20%;
-    display: flex;
-    justify-content: center;
-  }
 
   &__section {
     padding: $zorroa-metric-base;
     color: $zorroa-color-gray-dark-2;
+    border-top: 1px solid $zorroa-color-gray-light-2;
 
     .dark & {
       color: $zorroa-color-gray-light-2;
-    }
-
-    & ~ & {
-      border-top: 1px solid $zorroa-color-gray-light-2;
-
-      .dark & {
-        border-top-color: $zorroa-color-gray-dark-2;
-      }
+      border-top-color: $zorroa-color-gray-dark-2;
     }
   }
 
@@ -138,21 +107,6 @@ $fps-rate-offset: $zorroa-metric-base * 2;
       border-left: 1px solid $zorroa-color-gray-light-1;
       height: 10px;
       top: 0;
-    }
-  }
-
-  &__player-container {
-    position: relative;
-    margin: $zorroa-metric-base $zorroa-metric-base 0;
-  }
-
-  &__scrubber {
-    opacity: 0;
-    transition: opacity 250ms ease-in-out;
-    margin: $zorroa-metric-base / 2 0;
-
-    &--visible {
-      opacity: 1;
     }
   }
 }
