Op/evi 186 filetype widget (#842)
* restructured groupExts object to include key value pair for corresponding icons

* evi-186 fixed background color of pinned widget to be white in light theme

* evi-186 fixed search bar width, search icon spacing and widget border radius

* evi-186 reduced vertical length of shadow box; render was buggy in dark mode

* evi-186 deleted commented out line

* evi-186 changed box shadow color

* evi-186 moving icon assignments to component and out of file extension

--- a/src/components/Racetrack/Widget.scss
+++ b/src/components/Racetrack/Widget.scss
@@ -8,6 +8,10 @@
 .Widget-body {
   filter: grayscale(100%) opacity(50%);
   min-width: 100%;
+  background-color: $zorroa-color-white;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+
   .dark & {
     color: $zorroa-whitegray;
     background-color: $zorroa-color-black;
@@ -28,12 +32,11 @@
     position: absolute;
     top: 100%;
     right: 0;
-    box-shadow: 0 20px 30px 0 $zorroa-darkgray;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
+    box-shadow: 0 10px 30px 0 $zorroa-color-black;
 
-    .dark & { box-shadow: 0 20px 30px 0 black; }
+    .dark & {
+      box-shadow: 0 20px 30px 0 black;
+    }
   }
 }
 
