--- a/src/components/Racetrack/Filetype/Filetype.scss
+++ b/src/components/Racetrack/Filetype/Filetype.scss
@@ -1,4 +1,4 @@
-@import '../../styles/core-mixins.scss';
+@import '../../../styles/core-mixins.scss';
 
 .Filetype {
   .WidgetHeader {
@@ -29,7 +29,9 @@
   @include flexRow;
   @include flexWrap;
   border-bottom: 1px solid $zorroa-lightgray;
-  .dark & { border-bottom: 1px solid $zorroa-dimgray; }
+  .dark & {
+    border-bottom: 1px solid $zorroa-dimgray;
+  }
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 10px;
@@ -55,7 +57,9 @@
 .Filetype-remove-ext {
   font-size: 10px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   margin-left: 6px;
   cursor: pointer;
   &:hover {
@@ -78,10 +82,12 @@
 }
 
 .Filetype-title {
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   text-transform: uppercase;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   margin-top: 4px;
   margin-bottom: 8px;
 }
@@ -101,31 +107,39 @@
 .Filetype-group-icon {
   margin-right: 4px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
 }
 
 .Filetype-group-label {
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   height: 12px;
   min-height: 12px;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   margin-right: 10px;
   @include nowrap;
 
   .Filetype-group.disabled & {
     color: $zorroa-lightgray;
-    .dark & { color: $zorroa-dimgray; }
+    .dark & {
+      color: $zorroa-dimgray;
+    }
   }
 }
 
 .Filetype-group-count {
   @include flexOn;
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   font-size: 12px;
   color: $zorroa-lightgray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   text-align: right;
 }
 
@@ -147,44 +161,53 @@
 }
 
 .Filetype-type-ext {
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   text-transform: uppercase;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   min-height: 12px;
 
   .Filetype-type.disabled & {
     color: $zorroa-lightgray;
-    .dark & { color: $zorroa-dimgray; }
+    .dark & {
+      color: $zorroa-dimgray;
+    }
   }
 }
 
 .Filetype-type-label {
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   height: 12px;
   min-height: 12px;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   margin-right: 10px;
   @include nowrap;
 
   .Filetype-type.disabled & {
     color: $zorroa-lightgray;
-    .dark & { color: $zorroa-dimgray; }
+    .dark & {
+      color: $zorroa-dimgray;
+    }
   }
 }
 
 .Filetype-type-count {
   @include flexOn;
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed';
   font-size: 12px;
   color: $zorroa-lightgray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   text-align: right;
 }
-
 
 .Filetype-suggestions {
   min-width: 60px;
@@ -196,7 +219,9 @@
   @include flexRow;
   @include flexAlignItemsCenter;
   border: 1px solid $zorroa-nearwhite;
-  .dark & { border: 1px solid $zorroa-dimgray; }
+  .dark & {
+    border: 1px solid $zorroa-dimgray;
+  }
 }
 
 .Filetype-suggestions-body {
@@ -205,7 +230,9 @@
 
 .Filetype-suggestions-search-icon {
   color: $zorroa-gray;
-  .dark & { color: $zorroa-whitegray; }
+  .dark & {
+    color: $zorroa-whitegray;
+  }
   width: 14px;
   height: 14px;
   margin-right: 2px;
