op/evi-820-z-index: increased z-index of metadata window (#847)
* increased z-index of metadata window

* increase z-index of ResizableWindow when viewing flipbook in lightbox

* fixed typo

* removed console.log()

* wrote tests

* add metadata-container class and reorder alphabetically

* remove coverScrubber class

* add metadata-container class

* update test

* remove console.log()

* Update ResizableWindow.test.js

* Update ResizableWindow.test.js

* Update ResizableWindow.test.js

* Update FlipbookViewer.js

* Update ResizableWindow.js

* Update ResizableWindow.test.js

* Update ResizableWindow.js

--- a/src/components/Inspector/FlipbookViewer.scss
+++ b/src/components/Inspector/FlipbookViewer.scss
@@ -11,14 +11,6 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
   @include fullHeight;
   @include flexOn;
 
-  &__media {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    flex-shrink: 1000;
-  }
-
   &__loading-status {
     height: 100%;
     width: 100%;
@@ -30,6 +22,18 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  &__media {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    flex-shrink: 1000;
+  }
+
+  &__metadata-container {
+    z-index: 3;
   }
 
   &__pan-zoom {
