EVI-869, EVI-870: Flipbook improvments (#848)
* EVI-869: Make the Flipbook click target larger and indicate rollover

* EVI-870: Add back some controls to Flipbook widget

* Design nitpciks

* Make shouldLoop work in lightbox

--- a/src/components/Duration/Duration.scss
+++ b/src/components/Duration/Duration.scss
@@ -42,7 +42,14 @@ $background: rgba($zorroa-color-white, 0.75);
 
   &__icon {
     height: 25px;
-    cursor: default;
+    cursor: pointer;
+    opacity: .9;
+
+    &:hover {
+      opacity: 1;
+      transform: scale(1.15);
+      transition: 300ms transform ease-in-out;
+    }
   }
 
   &__frame-count {
