--- a/src/components/Flipbook/FlipbookImage/FlipbookImage.scss
+++ b/src/components/Flipbook/FlipbookImage/FlipbookImage.scss
@@ -19,6 +19,7 @@
     left: 0;
     z-index: 1;
     position: absolute;
+    max-width: 100%;
 
     &--no-frame-metadata {
       position: static;
