--- a/src/components/Racetrack/Multipage/Multipage.scss
+++ b/src/components/Racetrack/Multipage/Multipage.scss
@@ -4,6 +4,8 @@
   @include flexColCenter;
   @include nowrap;
   color: $zorroa-color-gray-dark-2;
+  max-width: 25 * $zorroa-metric-base;
+  overflow: hidden;
 
   .dark & {
     color: $zorroa-color-gray-dark-4;
@@ -40,4 +42,50 @@
 
 .Multipage-previewer {
   margin: $zorroa-metric-base;
+}
+
+.Multipage-player {
+  position: relative;
+}
+
+.Multipage-player-controls {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+}
+
+.Multipage-player-badge {
+  background: $zorroa-color-white;
+  height: $zorroa-metric-base * 2.5;
+  width: $zorroa-metric-base * 2.5;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+  position: relative;
+}
+
+.Multipage-player-start-or-stop {
+  width: 0;
+  height: 0;
+  padding: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 10px solid $zorroa-color-gray-dark-2;
+  border-right: 0;
+  position: absolute;
+  top: $zorroa-metric-base / 2;
+  left: 8px;
+  cursor: pointer;
+
+  &--stopped {
+    border: 0;
+    width: $zorroa-metric-base * 1.5;
+    height: $zorroa-metric-base * 1.5;
+    background: $zorroa-color-gray-dark-1;
+    left: $zorroa-metric-base / 2;
+  }
 }
