EVI-922: Give an affordance that usual behaviour is disabled when asset is selected (#862)

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -46,6 +46,7 @@
   position: absolute;
   cursor: pointer;
   &.isSelected {
+    cursor: move;
     $selected-border-size: 5px;
     &::before {
         border: $selected-border-size solid $zorroa-water-blue;
